fixed "validation links covered"

--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@ body {
 font-family: "Arial", sans-serif;
 margin: 0px;
 /*margin-top: -23px;*/
+/*background-color: #EAEAF0;*/
 }
 
 header {
@@ -80,12 +81,14 @@ font-size: 0.8em;
 position: absolute;
 padding-left: 5px;
 color: #E0E0E0;
+z-index: 1;
 }
 .center {
 position: absolute;
 color: #E0E0E0;
 width: 100%;
 text-align: center;
+z-index: 0;
 }
 .right {
 position: absolute;
